--- a/bbackup.ini
+++ b/bbackup.ini
@@ -1,19 +1,22 @@
 [DEFAULT]
 
-# название лог-файла
+# РЅР°Р·РІР°РЅРёРµ Р»РѕРі-С„Р°Р№Р»Р°
 log_file = bbackup.log
 
-# Уровень журнала (https://docs.python.org/3/library/logging.html#logging-levels)
+# РЈСЂРѕРІРµРЅСЊ Р¶СѓСЂРЅР°Р»Р° (https://docs.python.org/3/library/logging.html#logging-levels)
 log_level = DEBUG
 
-# папка для работы
+# РїР°РїРєР° РґР»СЏ СЂР°Р±РѕС‚С‹
 work_dir = bbackup
 
-# папка с источником для копирования
+# РїР°РїРєР° СЃ РёСЃС‚РѕС‡РЅРёРєРѕРј РґР»СЏ РєРѕРїРёСЂРѕРІР°РЅРёСЏ
 source_dir = /HDD1/samba
 
-# папка с назначением для копирования
+# РїР°РїРєР° СЃ РЅР°Р·РЅР°С‡РµРЅРёРµРј РґР»СЏ РєРѕРїРёСЂРѕРІР°РЅРёСЏ
 destination_dir = bbackup
 
-# префикс, с которым будут создаваться каталоги в папке назначения
+# РїСЂРµС„РёРєСЃ, СЃ РєРѕС‚РѕСЂС‹Рј Р±СѓРґСѓС‚ СЃРѕР·РґР°РІР°С‚СЊСЃСЏ РєР°С‚Р°Р»РѕРіРё РІ РїР°РїРєРµ РЅР°Р·РЅР°С‡РµРЅРёСЏ
 prefix = buh43_copy
+
+# РєРѕР»РёС‡РµСЃС‚РІРѕ РєРѕРїРёР№ РґР»СЏ С…СЂР°РЅРµРЅРёСЏ
+keep_copy = 5
