--- a/bbackup.ini
+++ b/bbackup.ini
@@ -13,10 +13,13 @@ work_dir = bbackup
 source_dir = /HDD1/samba
 
 # папка с назначением для копирования
-destination_dir = bbackup
+destination_dir = /mnt/bbackup
 
 # префикс, с которым будут создаваться каталоги в папке назначения
 prefix = buh43_copy
 
 # количество копий для хранения
 keep_copy = 5
+
+# раздел на устройстве, куда будет произведено копирование
+backup_volume = /dev/sdc1
