--- a/bbackup.ini
+++ b/bbackup.ini
@@ -23,3 +23,7 @@ keep_copy = 5
 
 # раздел на устройстве, куда будет произведено копирование
 backup_volume = /dev/sdc1
+
+# Период копирования информации
+# m -  месяцы, d - дни, h-часы
+period = 7d
