--- a/bbackup.ini
+++ b/bbackup.ini
@@ -25,5 +25,5 @@ keep_copy = 5
 backup_volume = /dev/sdc1
 
 # Период копирования информации
-# m -  месяцы, d - дни, h-часы
+# w - недели, d - дни, h - часы, m - минуты, s - секунды
 period = 7d
